--- a/holidays.html
+++ b/holidays.html
@@ -15,7 +15,7 @@
             --cv-text-dim: #15803d;     /* Dimmer Green Text */
             --cv-accent: #22c55e;       /* Bright Green Accent */
             --cv-accent-hover: #16a34a; /* Darker Green Accent */
-            --cv-border: #86efac;      /* Light Green Border */
+            --cv-border: #86efac;       /* Light Green Border */
             --cv-shadow: rgba(34, 197, 94, 0.15); /* Shadow color based on accent */
         }
 
@@ -233,6 +233,7 @@
             <div class="details-content">
                 <p><strong>Flight Arrival:</strong> FR 2959 Marseille to Venice Treviso</p>
                 <p><strong>Date:</strong> Sunday, 15 June 25</p>
+                <p><strong>Departure Time:</strong> 13:55 (MRS)</p>
                 <p><strong>Arrival Time:</strong> 15:15 (TSF)</p>
             </div>
         </div>
@@ -252,6 +253,23 @@
             </div>
         </div>
 
+        <div class="route-card">
+            <h2>Wednesday, June 18</h2>
+            <a href="https://www.rome2rio.com/map/Peschiera-del-Garda/Venice" class="route-button" target="_blank">Peschiera del Garda to Venice (Travel Options)</a>
+        </div>
+
+        <div class="details-section accommodation-details">
+            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
+            <div class="details-content">
+                <p><strong>Venice Stay (Details TBC):</strong></p>
+                <p><strong>Check-in:</strong> Wednesday, June 18</p>
+                <p><strong>Check-out:</strong> Friday, June 20</p>
+                <p><i>Accommodation to be booked for 2 adults (mother & 16-year-old daughter).</i></p>
+                <p><a href="https://www.booking.com/city/it/venice.html" target="_blank">Search on Booking.com</a></p>
+                <p><a href="https://www.airbnb.ie/venice-italy/stays" target="_blank">Search on Airbnb</a></p>
+            </div>
+        </div>
+
         <div class="details-section flight-details">
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22 16V18H20V16H22ZM18 16V18H16V16H18ZM14 16V18H12V16H14ZM10 16V18H8V16H10ZM6 16V18H4V16H6ZM22 12V14H20V12H22ZM18 12V14H16V12H18ZM14 12V14H12V12H14ZM10 12V14H8V12H10ZM6 12V14H4V12H6ZM22 8V10H20V8H22ZM18 8V10H16V8H18ZM14 8V10H12V8H14ZM10 8V10H8V8H10ZM6 8V10H4V8H6ZM22 4V6H20V4H22ZM18 4V6H16V4H18ZM14 4V6H12V4H14ZM10 4V6H8V4H10ZM6 4V6H4V4H6Z"/></svg>
             <div class="details-content">
@@ -261,14 +279,15 @@
                 <p><strong>Arrival Time:</strong> 16:30 (DUB)</p>
             </div>
         </div>
-        </div>
+    </div>
 
     <div id="Donnacha" class="tab-content">
         <div class="details-section flight-details">
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22 16V18H20V16H22ZM18 16V18H16V16H18ZM14 16V18H12V16H14ZM10 16V18H8V16H10ZM6 16V18H4V16H6ZM22 12V14H20V12H22ZM18 12V14H16V12H18ZM14 12V14H12V12H14ZM10 12V14H8V12H10ZM6 12V14H4V12H6ZM22 8V10H20V8H22ZM18 8V10H16V8H18ZM14 8V10H12V8H14ZM10 8V10H8V8H10ZM6 8V10H4V8H6ZM22 4V6H20V4H22ZM18 4V6H16V4H18ZM14 4V6H12V4H14ZM10 4V6H8V4H10ZM6 4V6H4V4H6Z"/></svg>
             <div class="details-content">
-                <p><strong>Your Flight Arrival:</strong> FR 831 Dublin to Venice (Marco Polo)</p>
+                <p><strong>Flight Arrival:</strong> FR 831 Dublin to Venice (Marco Polo)</p>
                 <p><strong>Date:</strong> Fri, 13 June 25</p>
+                <p><strong>Departure Time:</strong> 10:45 (DUB)</p>
                 <p><strong>Arrival Time:</strong> 14:25 (VCE)</p>
             </div>
         </div>
@@ -337,7 +356,7 @@
         <div class="details-section flight-details">
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22 16V18H20V16H22ZM18 16V18H16V16H18ZM14 16V18H12V16H14ZM10 16V18H8V16H10ZM6 16V18H4V16H6ZM22 12V14H20V12H22ZM18 12V14H16V12H18ZM14 12V14H12V12H14ZM10 12V14H8V12H10ZM6 12V14H4V12H6ZM22 8V10H20V8H22ZM18 8V10H16V8H18ZM14 8V10H12V8H14ZM10 8V10H8V8H10ZM6 8V10H4V8H6ZM22 4V6H20V4H22ZM18 4V6H16V4H18ZM14 4V6H12V4H14ZM10 4V6H8V4H10ZM6 4V6H4V4H6Z"/></svg>
             <div class="details-content">
-                <p><strong>Your Flight Departure:</strong> FR3394 Milan (Bergamo) to Santander</p>
+                <p><strong>Flight Departure:</strong> FR3394 Milan (Bergamo) to Santander</p>
                 <p><strong>Date:</strong> Sat, 21 June 25</p>
                 <p><strong>Departure Time:</strong> 10:45 (BGY)</p>
                 <p><strong>Arrival Time:</strong> 12:50 (SDR)</p>
@@ -366,7 +385,7 @@
         <div class="details-section flight-details">
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22 16V18H20V16H22ZM18 16V18H16V16H18ZM14 16V18H12V16H14ZM10 16V18H8V16H10ZM6 16V18H4V16H6ZM22 12V14H20V12H22ZM18 12V14H16V12H18ZM14 12V14H12V12H14ZM10 12V14H8V12H10ZM6 12V14H4V12H6ZM22 8V10H20V8H22ZM18 8V10H16V8H18ZM14 8V10H12V8H14ZM10 8V10H8V8H10ZM6 8V10H4V8H6ZM22 4V6H20V4H22ZM18 4V6H16V4H18ZM14 4V6H12V4H14ZM10 4V6H8V4H10ZM6 4V6H4V4H6Z"/></svg>
             <div class="details-content">
-                <p><strong>Your Flight Departure:</strong> FR7153 Santander to Dublin</p>
+                <p><strong>Flight Departure:</strong> FR7153 Santander to Dublin</p>
                 <p><strong>Date:</strong> Friday, 27 June 25</p>
                 <p><strong>Departure Time:</strong> 09:20 (SDR)</p>
                 <p><strong>Arrival Time:</strong> 10:20 (DUB)</p>
