--- a/holidays.html
+++ b/holidays.html
@@ -247,9 +247,10 @@
             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
             <div class="details-content">
                 <p><strong>ApartHotel in Peschiera del Garda Stay:</strong></p>
-                <p><strong>Check-in:</strong> Sunday, June 15</p>
-                <p><strong>Check-out:</strong> Wednesday, June 18</p>
-                <p><a href="https://www.airbnb.co.uk/rooms/24076985?check_out=2025-06-18&viralityEntryPoint=1&unique_share_id=5D1665FF-FDBB-48E8-BBFF-8E6CA0BB3BCF&slcid=a20774236dbc4ba6b775d9433e06d8e0&s=76&feature=share&adults=3&check_in=2025-06-15&channel=native&slug=kU1cn7j2&source_impression_id=p3_1746735529_P3Vht4qmC0H91KJ8" target="_blank">View Booking Details</a></p>
+                <p><strong>Check-in:</strong> Sunday, June 15 (15:00 - 19:00)</p>
+                <p><strong>Check-out:</strong> Wednesday, June 18 (Before 10:00)</p>
+                <p><a href="https://www.airbnb.co.uk/rooms/24076985?check_out=2025-06-18&viralityEntryPoint=1&unique_share_id=5D1665FF-FDBB-48E8-BBFF-8E6CA0BB3BCF&slcid=a20774236dbc4ba6b775d9433e06d8e0&s=76&feature=share&adults=3&check_in=2025-06-15&channel=native&slug=kU1cn7j2&source_impression_id=p3_1746735529_P3Vht4qmC0H91KJ8" target="_blank">View Booking Details (Airbnb)</a></p>
+                <p style="font-size: 11px; color: var(--cv-text-dim);"><i>(Check-in/out times based on general Airbnb info for the area)</i></p>
             </div>
         </div>
 
@@ -261,12 +262,13 @@
         <div class="details-section accommodation-details">
             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
             <div class="details-content">
-                <p><strong>Venice Stay (Details TBC):</strong></p>
-                <p><strong>Check-in:</strong> Wednesday, June 18</p>
-                <p><strong>Check-out:</strong> Friday, June 20</p>
-                <p><i>Accommodation to be booked for 2 adults (mother & 16-year-old daughter).</i></p>
-                <p><a href="https://www.booking.com/city/it/venice.html" target="_blank">Search on Booking.com</a></p>
-                <p><a href="https://www.airbnb.ie/venice-italy/stays" target="_blank">Search on Airbnb</a></p>
+                <p><strong>Venice Stay: Console - Palais Historique & Romantique</strong></p>
+                <p><strong>Address:</strong> Calle del Console, Castello, 6240, Venice, 30122, Italy</p>
+                <p><strong>Phone:</strong> +393312217011</p>
+                <p><strong>Check-in:</strong> Wednesday, June 18 (13:00 - 19:30)</p>
+                <p><strong>Check-out:</strong> Friday, June 20 (08:00 - 11:00)</p>
+                <p><strong>Booking No:</strong> 4859365823 / <strong>PIN:</strong> 8792</p>
+                <p><a href="https://secure.booking.com/confirmation.en-gb.html?aid=2378099;auth_key=d5tZJfXmqrPiGIKV&;pbtrack=email_mainCTA;from_conf_email_tracking=1;from_conf_email_source=1" target="_blank">View Booking Confirmation</a></p>
             </div>
         </div>
 
@@ -301,11 +303,12 @@
             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
             <div class="details-content">
                 <p><strong>Hotel Terme Patria, Padova Stay:</strong></p>
-                <p><strong>Check-in:</strong> Friday, June 13</p>
-                <p><strong>Check-out:</strong> Sunday, June 15</p>
+                <p><strong>Check-in:</strong> Friday, June 13 (14:00 - 21:00)</p>
+                <p><strong>Check-out:</strong> Sunday, June 15 (08:00 - 11:00)</p>
                 <p><strong>Confirmation Number:</strong> 4836897931</p>
                 <p><strong>PIN Code:</strong> 8758</p>
                 <p><a href="https://secure.booking.com/confirmation.en-gb.html?label=gen173nr-1FCA4oggI46AdICVgEaGmIAQGYAQm4ARfIAQzYAQHoAQH4AQaIAgGoAgO4Auyg88AGwAIB0gIkODk5MmZmOTUtMTljYS00NjZlLTk4YzktNTM1ZWQ0MTI2MzUw2AIF4AIB&sid=5e5eaa2ede165c5c4bb140ecc5efb92423&aid=304142&auth_key=eyi9frUcn1LUH0oV&source=mytrips#" target="_blank">View Booking Confirmation</a></p>
+                <p style="font-size: 11px; color: var(--cv-text-dim);"><i>(Check-in/out times based on general hotel info from Booking.com)</i></p>
             </div>
         </div>
 
@@ -323,9 +326,10 @@
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
             <div class="details-content">
                 <p><strong>ApartHotel in Peschiera del Garda Stay:</strong></p>
-                <p><strong>Check-in:</strong> Sunday, June 15</p>
-                <p><strong>Check-out:</strong> Wednesday, June 18</p>
-                <p><a href="https://www.airbnb.co.uk/rooms/24076985?check_out=2025-06-18&viralityEntryPoint=1&unique_share_id=5D1665FF-FDBB-48E8-BBFF-8E6CA0BB3BCF&slcid=a20774236dbc4ba6b775d9433e06d8e0&s=76&feature=share&adults=3&check_in=2025-06-15&channel=native&slug=kU1cn7j2&source_impression_id=p3_1746735529_P3Vht4qmC0H91KJ8" target="_blank">View Booking Details</a></p>
+                <p><strong>Check-in:</strong> Sunday, June 15 (15:00 - 19:00)</p>
+                <p><strong>Check-out:</strong> Wednesday, June 18 (Before 10:00)</p>
+                <p><a href="https://www.airbnb.co.uk/rooms/24076985?check_out=2025-06-18&viralityEntryPoint=1&unique_share_id=5D1665FF-FDBB-48E8-BBFF-8E6CA0BB3BCF&slcid=a20774236dbc4ba6b775d9433e06d8e0&s=76&feature=share&adults=3&check_in=2025-06-15&channel=native&slug=kU1cn7j2&source_impression_id=p3_1746735529_P3Vht4qmC0H91KJ8" target="_blank">View Booking Details (Airbnb)</a></p>
+                <p style="font-size: 11px; color: var(--cv-text-dim);"><i>(Check-in/out times based on general Airbnb info for the area)</i></p>
             </div>
         </div>
 
@@ -339,11 +343,12 @@
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L3 7V9H4V20H20V9H21V7L12 2ZM5 8L12 4L19 8V9H5V8ZM6 10H18V12H6V10ZM6 13H18V15H6V13ZM6 16H18V18H6V16Z"/></svg>
             <div class="details-content">
                 <p><strong>Albergo Vittoria, Toscolano Maderno Stay:</strong></p>
-                <p><strong>Check-in:</strong> Wednesday, June 18</p>
-                <p><strong>Check-out:</strong> Saturday, June 21</p>
+                <p><strong>Check-in:</strong> Wednesday, June 18 (14:30 - 19:30)</p>
+                <p><strong>Check-out:</strong> Saturday, June 21 (07:00 - 10:00)</p>
                 <p><strong>Confirmation Number:</strong> 4656141419</p>
                 <p><strong>PIN Code:</strong> 7373</p>
                 <p><a href="https://secure.booking.com/confirmation.en-gb.html?label=gen173nr-1FCA4oggI46AdICVgEaGmIAQGYAQm4ARfIAQzYAQHoAQH4AQaIAgGoAgO4Auyg88AGwAIB0gIkODk5MmZmOTUtMTljYS00NjZlLTk4YzktNTM1ZWQ0MTI2MzUw2AIF4AIB&sid=5e5eaa2ede165c5c4bb140ecc5efb92423&aid=304142&auth_key=HbPRZNESFwvMB8Lw&source=mytrips#" target="_blank">View Booking Confirmation</a></p>
+                <p style="font-size: 11px; color: var(--cv-text-dim);"><i>(Check-in/out times based on general hotel info from various sources)</i></p>
             </div>
         </div>
 
